--- a/public/template/css/main.css
+++ b/public/template/css/main.css
@@ -1,9 +1,9 @@
 ::-moz-selection {
-    background-color: #f7631b;
+    background-color: #358f66;
     color: #fff;
 }
 ::selection {
-    background-color: #f7631b;
+    background-color: #358f66;
     color: #fff;
 }
 ::-webkit-input-placeholder {
@@ -30,7 +30,7 @@
 }
 body {
     color: #777;
-    font-family: "Poppins", sans-serif;
+    font-family: "Muli", "Segoe Ui", sans-serif;
     font-size: 14px;
     font-weight: 300;
     line-height: 1.625em;
@@ -613,7 +613,7 @@ th {
 }
 .generic-banner {
     margin-top: 60px;
-    background-color: #f7631b;
+    background-color: #358f66;
     text-align: center;
 }
 .generic-banner .height {
@@ -693,7 +693,7 @@ sup,
 sub,
 u,
 del {
-    color: #f7631b;
+    color: #358f66;
 }
 h1 {
     font-size: 36px;
@@ -811,22 +811,22 @@ h6 {
 }
 .genric-btn.primary {
     color: #fff;
-    background: #f7631b;
+    background: #358f66;
     border: 1px solid transparent;
 }
 .genric-btn.primary:hover {
-    color: #f7631b;
-    border: 1px solid #f7631b;
+    color: #358f66;
+    border: 1px solid #358f66;
     background: #fff;
 }
 .genric-btn.primary-border {
-    color: #f7631b;
-    border: 1px solid #f7631b;
+    color: #358f66;
+    border: 1px solid #358f66;
     background: #fff;
 }
 .genric-btn.primary-border:hover {
     color: #fff;
-    background: #f7631b;
+    background: #358f66;
     border: 1px solid transparent;
 }
 .genric-btn.success {
@@ -940,7 +940,7 @@ h6 {
 .generic-blockquote {
     padding: 30px 50px 30px 30px;
     background: #fff;
-    border-left: 2px solid #f7631b;
+    border-left: 2px solid #358f66;
 }
 @media (max-width: 991px) {
     .progress-table-wrap {
@@ -1054,7 +1054,7 @@ h6 {
     position: absolute;
     width: 14px;
     height: 14px;
-    border: 3px solid #f7631b;
+    border: 3px solid #358f66;
     background: #fff;
     top: 4px;
     left: 0;
@@ -1065,7 +1065,7 @@ h6 {
 }
 .ordered-list li {
     list-style-type: decimal-leading-zero;
-    color: #f7631b;
+    color: #358f66;
     font-weight: 500;
     line-height: 1.82em !important;
 }
@@ -1076,7 +1076,7 @@ h6 {
 .ordered-list-alpha li {
     margin-left: 30px;
     list-style-type: lower-alpha;
-    color: #f7631b;
+    color: #358f66;
     font-weight: 500;
     line-height: 1.82em !important;
 }
@@ -1087,7 +1087,7 @@ h6 {
 .ordered-list-roman li {
     margin-left: 30px;
     list-style-type: lower-roman;
-    color: #f7631b;
+    color: #358f66;
     font-weight: 500;
     line-height: 1.82em !important;
 }
@@ -1148,7 +1148,7 @@ h6 {
 }
 .single-input-primary:focus {
     outline: none;
-    border: 1px solid #f7631b;
+    border: 1px solid #358f66;
 }
 .single-input-accent {
     display: block;
@@ -1202,7 +1202,7 @@ h6 {
     width: 15px;
     height: 15px;
     border-radius: 50%;
-    background: #f7631b;
+    background: #358f66;
     -webkit-transition: all 0.2s;
     -moz-transition: all 0.2s;
     -o-transition: all 0.2s;
@@ -1280,7 +1280,7 @@ h6 {
     left: 19px;
 }
 .primary-switch input:checked + label:before {
-    background: #f7631b;
+    background: #358f66;
 }
 .confirm-switch {
     width: 35px;
@@ -1597,11 +1597,11 @@ h6 {
     padding-left: 20px;
 }
 .default-select .nice-select .list .option.selected {
-    color: #f7631b;
+    color: #358f66;
     background: transparent;
 }
 .default-select .nice-select .list .option:hover {
-    color: #f7631b;
+    color: #358f66;
     background: transparent;
 }
 .default-select .current {
@@ -1649,11 +1649,11 @@ h6 {
     padding-left: 45px;
 }
 .form-select .nice-select .list .option.selected {
-    color: #f7631b;
+    color: #358f66;
     background: transparent;
 }
 .form-select .nice-select .list .option:hover {
-    color: #f7631b;
+    color: #358f66;
     background: transparent;
 }
 .form-select .current {
@@ -1694,7 +1694,7 @@ h6 {
     transition: all 0.3s ease 0s;
 }
 .header-top .header-top-left a:hover i {
-    color: #f7631b;
+    color: #358f66;
 }
 .header-top .header-top-right {
     text-align: right;
@@ -1715,7 +1715,7 @@ h6 {
     }
 }
 .top-head-btn {
-    background: #f7631b;
+    background: #358f66;
     padding: 9px 26px;
 }
 .main-menu {
@@ -1756,7 +1756,7 @@ h6 {
 #header #logo h1 a:hover {
     color: #000;
     padding-left: 10px;
-    border-left: 4px solid #f7631b;
+    border-left: 4px solid #358f66;
 }
 #header #logo img {
     padding: 0;
@@ -1854,7 +1854,7 @@ h6 {
     text-transform: none;
 }
 .nav-menu ul li:hover > a {
-    color: #f7631b;
+    color: #358f66;
 }
 .nav-menu ul ul {
     margin-right: 10px;
@@ -1933,13 +1933,13 @@ h6 {
     color: #fff;
 }
 #mobile-nav ul .menu-has-children i.fa-chevron-up {
-    color: #f7631b;
+    color: #358f66;
 }
 #mobile-nav ul .menu-has-children li a {
     text-transform: none;
 }
 #mobile-nav ul .menu-item-active {
-    color: #f7631b;
+    color: #358f66;
 }
 #mobile-body-overly {
     width: 100%;
@@ -1967,7 +1967,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     color: #008000;
 }
 .primary-btn {
-    background: #f7631b;
+    background: #358f66;
     line-height: 42px;
     padding-left: 30px;
     padding-right: 30px;
@@ -2013,10 +2013,10 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 .primary-btn.white:hover {
     background: #fff;
-    color: #f7631b;
+    color: #358f66;
 }
 .primary-btn.white:hover span {
-    color: #f7631b;
+    color: #358f66;
 }
 .primary-btn.wh {
     background: #fff;
@@ -2096,14 +2096,14 @@ body.mobile-nav-active #mobile-nav-toggle {
     }
 }
 .banner-content .primary-btn {
-    background-color: #f7631b;
+    background-color: #358f66;
     color: #fff;
     font-weight: 600;
     font-size: 14px;
 }
 .banner-content .primary-btn:hover {
     background-color: #fff;
-    color: #f7631b;
+    color: #358f66;
 }
 .feature-area {
     margin-top: -62px;
@@ -2140,17 +2140,17 @@ body.mobile-nav-active #mobile-nav-toggle {
     cursor: pointer;
 }
 .single-feature:hover .title {
-    background: #f7631b;
+    background: #358f66;
 }
 .single-feature:hover .desc-wrap a {
-    color: #f7631b;
+    color: #358f66;
 }
 @media (max-width: 991px) {
     .single-feature {
         margin-bottom: 30px;
     }
     .single-feature .title {
-        background: #f7631b;
+        background: #358f66;
     }
 }
 .popular-course-area .owl-dots {
@@ -2180,7 +2180,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     -moz-transition: all 0.3s ease 0s;
     -o-transition: all 0.3s ease 0s;
     transition: all 0.3s ease 0s;
-    background: #f7631b;
+    background: #358f66;
 }
 .single-popular-carusel .thumb {
     overflow: hidden;
@@ -2218,7 +2218,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     margin: 20px 0px;
 }
 .single-popular-carusel .details h4:hover {
-    color: #f7631b !important;
+    color: #358f66 !important;
 }
 @media (max-width: 576px) {
     .single-popular-carusel {
@@ -2286,7 +2286,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     margin-top: 50px;
 }
 .search-course-area .details-content .single-detials span {
-    color: #f7631b;
+    color: #358f66;
     font-size: 30px;
 }
 .search-course-area .details-content .single-detials h4 {
@@ -2329,7 +2329,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     -moz-transition: all 0.3s ease 0s;
     -o-transition: all 0.3s ease 0s;
     transition: all 0.3s ease 0s;
-    background: #f7631b;
+    background: #358f66;
 }
 @media (max-width: 1024px) {
     .active-upcoming-event-carusel .owl-controls {
@@ -2366,7 +2366,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     transition: all 0.3s ease 0s;
 }
 .single-carusel .detials h4:hover {
-    color: #f7631b;
+    color: #358f66;
 }
 .single-carusel .detials p {
     margin-top: 20px;
@@ -2410,7 +2410,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     -moz-transition: all 0.3s ease 0s;
     -o-transition: all 0.3s ease 0s;
     transition: all 0.3s ease 0s;
-    background: #f7631b;
+    background: #358f66;
 }
 .single-review .title {
     margin: 20px 0;
@@ -2440,7 +2440,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     transform: scale(1.1);
 }
 .single-blog:hover h5 {
-    color: #f7631b;
+    color: #358f66;
 }
 .single-blog h5 {
     margin-bottom: 12px;
@@ -2494,7 +2494,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 .single-blog .details-btn:hover {
     width: 140px;
-    background: #f7631b;
+    background: #358f66;
     box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2);
 }
 .single-blog .details-btn:hover .details {
@@ -2634,7 +2634,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 .accordion > dt > a.active {
     color: #fff;
     border-color: #ddd;
-    background: #f7631b;
+    background: #358f66;
     cursor: default;
 }
 .accordion > dt > a:after {
@@ -2645,7 +2645,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     position: absolute;
     top: 50%;
     right: 10px;
-    font-family: "FontAwesome";
+    font-family: "Muli", "Segoe Ui";
     speak: none;
     font-style: normal;
     font-weight: normal;
@@ -2759,8 +2759,8 @@ dl.accordion.time-line:before {
     border-color: #e8e8e8;
 }
 .toggle > dt > a.active {
-    color: #f7631b;
-    border-color: #f7631b;
+    color: #358f66;
+    border-color: #358f66;
 }
 .toggle > dt > a:after {
     content: "\f107";
@@ -2770,7 +2770,7 @@ dl.accordion.time-line:before {
     position: absolute;
     top: 50%;
     right: 10px;
-    font-family: "FontAwesome";
+    font-family: "Muli", "Segoe Ui";
     speak: none;
     font-style: normal;
     font-weight: normal;
@@ -2785,7 +2785,7 @@ dl.accordion.time-line:before {
 .toggle > dt > a.active:after,
 .toggle > dt > a.active:hover:after {
     content: "\f106";
-    color: #f7631b;
+    color: #358f66;
 }
 .toggle > dt > a:hover:after {
     color: #444;
@@ -2883,8 +2883,8 @@ dl.toggle.time-line:before {
 }
 .courses-page .primary-btn:hover {
     background: transparent;
-    border-color: #f7631b;
-    color: #f7631b;
+    border-color: #358f66;
+    color: #358f66;
 }
 .left-contents .jq-tab-wrapper {
     -webkit-box-sizing: border-box;
@@ -2932,9 +2932,9 @@ dl.toggle.time-line:before {
 }
 .left-contents .jq-tab-menu .jq-tab-title:hover,
 .left-contents .jq-tab-menu .jq-tab-title.active {
-    color: #f7631b;
+    color: #358f66;
     background: transparent;
-    border-bottom: 1px solid #f7631b;
+    border-bottom: 1px solid #358f66;
 }
 .left-contents .horizontal-tab .jq-tab-menu {
     display: -webkit-inline-box;
@@ -2974,7 +2974,7 @@ dl.toggle.time-line:before {
     color: #222;
 }
 .left-contents .course-list li .primary-btn:hover {
-    background: #f7631b;
+    background: #358f66;
     color: #fff;
 }
 @media (max-width: 414px) {
@@ -3032,7 +3032,7 @@ dl.toggle.time-line:before {
     transition: all 0.3s ease 0s;
 }
 .left-contents .comments-area .desc h5:hover a {
-    color: #f7631b !important;
+    color: #358f66 !important;
 }
 .left-contents .comments-area .date {
     font-size: 13px;
@@ -3054,14 +3054,14 @@ dl.toggle.time-line:before {
     transition: all 0.3s ease 0s;
 }
 .left-contents .comments-area .btn-reply:hover {
-    background: #f7631b;
+    background: #358f66;
     color: #fff;
 }
 .left-contents .comment-form {
     border: none;
 }
 .left-contents .star .checked {
-    color: #f7631b;
+    color: #358f66;
 }
 .left-contents .reviews span,
 .left-contents .reviews .star {
@@ -3078,7 +3078,7 @@ dl.toggle.time-line:before {
 }
 .left-contents .avg-review span {
     font-size: 18px;
-    color: #f7631b;
+    color: #358f66;
 }
 @media (max-width: 991px) {
     .left-contents .avg-review {
@@ -3106,7 +3106,7 @@ dl.toggle.time-line:before {
     margin-bottom: 0px;
 }
 .right-contents ul li .or {
-    color: #f7631b !important;
+    color: #358f66 !important;
 }
 .right-contents .primary-btn {
     margin-top: 10px;
@@ -3126,8 +3126,8 @@ dl.toggle.time-line:before {
     border: 1px solid transparent;
 }
 .event-page-lists .primary-btn:hover {
-    color: #f7631b;
-    border-color: #f7631b;
+    color: #358f66;
+    border-color: #358f66;
     background: transparent;
 }
 .event-details-area .details-content h4 {
@@ -3192,7 +3192,7 @@ dl.toggle.time-line:before {
     }
 }
 .event-details-area .social-nav .navs a:hover {
-    background: #f7631b;
+    background: #358f66;
     color: #fff;
 }
 .event-details-area .social-nav .navs .nav-prev .lnr {
@@ -3367,7 +3367,7 @@ dl.toggle.time-line:before {
     transition: all 0.3s ease 0s;
 }
 .post-content-area .single-post .meta-details .tags li a:hover {
-    color: #f7631b;
+    color: #358f66;
 }
 @media (max-width: 1024px) {
     .post-content-area .single-post .meta-details {
@@ -3389,7 +3389,7 @@ dl.toggle.time-line:before {
 .post-content-area .single-post .date a:hover,
 .post-content-area .single-post .view a:hover,
 .post-content-area .single-post .comments a:hover {
-    color: #f7631b;
+    color: #358f66;
 }
 .post-content-area .single-post .user-name .lnr,
 .post-content-area .single-post .date .lnr,
@@ -3417,7 +3417,7 @@ dl.toggle.time-line:before {
     border-radius: 0px !important;
 }
 .post-content-area .single-post .primary-btn:hover {
-    background: #f7631b !important;
+    background: #358f66 !important;
     color: #fff !important;
 }
 .posts-list .posts-title h3 {
@@ -3427,7 +3427,7 @@ dl.toggle.time-line:before {
     transition: all 0.3s ease 0s;
 }
 .posts-list .posts-title h3:hover {
-    color: #f7631b;
+    color: #358f66;
 }
 .blog-pagination {
     padding-top: 60px;
@@ -3444,7 +3444,7 @@ dl.toggle.time-line:before {
     font-weight: 400;
 }
 .blog-pagination .page-item.active .page-link {
-    background-color: #f7631b;
+    background-color: #358f66;
     border-color: transparent;
     color: #fff;
 }
@@ -3467,7 +3467,7 @@ dl.toggle.time-line:before {
 .blog-pagination .page-link:hover {
     color: #fff;
     text-decoration: none;
-    background-color: #f7631b;
+    background-color: #358f66;
     border-color: #eee;
 }
 .sidebar-widgets {
@@ -3557,10 +3557,10 @@ dl.toggle.time-line:before {
     transition: all 0.3s ease 0s;
 }
 .widget-wrap .user-info-widget .social-links li a:hover {
-    color: #f7631b;
+    color: #358f66;
 }
 .widget-wrap .popular-post-widget .popular-title {
-    background: #f7631b;
+    background: #358f66;
     color: #fff;
     text-align: center;
     padding: 12px 0px;
@@ -3586,7 +3586,7 @@ dl.toggle.time-line:before {
     transition: all 0.3s ease 0s;
 }
 .widget-wrap .popular-post-widget .single-post-list .details h6:hover {
-    color: #f7631b;
+    color: #358f66;
 }
 .widget-wrap .popular-post-widget .single-post-list .details p {
     margin-bottom: 0px;
@@ -3595,7 +3595,7 @@ dl.toggle.time-line:before {
     width: 100%;
 }
 .widget-wrap .post-category-widget .category-title {
-    background: #f7631b;
+    background: #358f66;
     color: #fff;
     text-align: center;
     padding: 12px 0px;
@@ -3622,13 +3622,13 @@ dl.toggle.time-line:before {
     color: #777;
 }
 .widget-wrap .post-category-widget .cat-list li:hover {
-    border-color: #f7631b;
+    border-color: #358f66;
 }
 .widget-wrap .post-category-widget .cat-list li:hover p {
-    color: #f7631b;
+    color: #358f66;
 }
 .widget-wrap .newsletter-widget .newsletter-title {
-    background: #f7631b;
+    background: #358f66;
     color: #fff;
     text-align: center;
     padding: 12px 0px;
@@ -3641,7 +3641,7 @@ dl.toggle.time-line:before {
     margin: 20px 0px;
 }
 .widget-wrap .newsletter-widget .bbtns {
-    background: #f7631b;
+    background: #358f66;
     color: #fff;
     font-size: 12px;
     font-weight: 500;
@@ -3690,7 +3690,7 @@ dl.toggle.time-line:before {
     margin-bottom: 0px;
 }
 .widget-wrap .tag-cloud-widget .tagcloud-title {
-    background: #f7631b;
+    background: #358f66;
     color: #fff;
     text-align: center;
     padding: 12px 0px;
@@ -3708,7 +3708,7 @@ dl.toggle.time-line:before {
     transition: all 0.3s ease 0s;
 }
 .widget-wrap .tag-cloud-widget ul li:hover {
-    background: #f7631b;
+    background: #358f66;
 }
 .widget-wrap .tag-cloud-widget ul li:hover a {
     color: #fff;
@@ -3738,7 +3738,7 @@ dl.toggle.time-line:before {
     transition: all 0.3s ease 0s;
 }
 .single-post-area .social-links li a:hover {
-    color: #f7631b;
+    color: #358f66;
 }
 .single-post-area .quotes {
     margin-top: 20px;
@@ -3885,7 +3885,7 @@ dl.toggle.time-line:before {
     transition: all 0.3s ease 0s;
 }
 .comments-area .btn-reply:hover {
-    background-color: #f7631b;
+    background-color: #358f66;
     color: #fff;
 }
 .comment-form {
@@ -3952,8 +3952,8 @@ dl.toggle.time-line:before {
 }
 .comment-form .primary-btn:hover {
     background: transparent;
-    border-color: #f7631b !important;
-    color: #f7631b !important;
+    border-color: #358f66 !important;
+    color: #358f66 !important;
 }
 .contact-page-area {
     background: #f9f9ff;
@@ -4004,8 +4004,8 @@ dl.toggle.time-line:before {
     text-transform: uppercase !important;
 }
 .contact-page-area .form-area .genric-btn:hover {
-    border: 1px solid #f7631b;
-    color: #f7631b !important;
+    border: 1px solid #358f66;
+    color: #358f66 !important;
 }
 @media (max-width: 991px) {
     .contact-page-area .address-wrap {
@@ -4023,7 +4023,7 @@ dl.toggle.time-line:before {
 .contact-page-area .address-wrap .single-contact-address .lnr {
     font-size: 30px;
     font-weight: 500;
-    color: #f7631b;
+    color: #358f66;
     margin-right: 30px;
 }
 .footer-area {
@@ -4060,10 +4060,10 @@ dl.toggle.time-line:before {
     transition: all 0.3s ease 0s;
 }
 .single-footer-widget ul li a:hover {
-    color: #f7631b;
+    color: #358f66;
 }
 .single-footer-widget .bb-btn {
-    color: #f7631b;
+    color: #358f66;
     color: #fff;
     font-weight: 300;
     border-radius: 0;
@@ -4084,7 +4084,7 @@ dl.toggle.time-line:before {
 .single-footer-widget .btn {
     font-size: 1.2rem;
     border-radius: 0;
-    background: #f7631b;
+    background: #358f66;
     color: #fff;
 }
 .single-footer-widget .btn .lnr {
@@ -4141,7 +4141,7 @@ dl.toggle.time-line:before {
 }
 .footer-bottom .lnr,
 .footer-bottom a {
-    color: #f7631b;
+    color: #358f66;
 }
 .footer-bottom .footer-social a {
     background: rgba(255, 255, 255, 0.1);
@@ -4159,5 +4159,5 @@ dl.toggle.time-line:before {
     vertical-align: bottom;
 }
 .footer-bottom .footer-social a:hover {
-    background-color: #f7631b;
+    background-color: #358f66;
 }
