--- a/public/template/css/main.css
+++ b/public/template/css/main.css
@@ -2238,7 +2238,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     transform: scale(1.1);
 }
 .search-course-area {
-    background: url(../img/s-bg.jpg) center;
+    background: url(../img/top-banner.jpg) center;
     background-size: cover;
 }
 .search-course-area .overlay-bg {
